# nullblock

./: .dockerignore  .env.dev  .gitignore  AGENTS.md  BACKGROUND_FIX.md  CLAUDE.md  CLAUDE_ARCHIVE.txt  CROSSROADS_IMPLEMENTATION_STATUS.md  CROSSROADS_NAVBAR_CLEANUP.md  CROSSROADS_QUOTE_POSITIONING.md  CROSSROADS_SIDEBAR_LAYOUT.md  CROSSROADS_UI_FIXES.md  IMAGE_GENERATION_FINAL_FIX.md  IMAGE_GENERATION_TOKEN_FIX.md  LICENSE  LLM_PROXY_STATUS.md  MANIFESTO.md  MARKETING_AGENT_README.md  NOTICE  README.md  SUMMARY_IMAGE_DOWNLOAD.md  USER_REFERENCES_MIGRATION_SUMMARY.md  debug-task-creation.sh  debug_image_generation.md  demo_integration.py  demo_integration_sdk.py  docker-compose.yml  env.example  hecate_curl_examples.md  justfile  notes.txt  package-lock.json  package.json  test-autostart.sh  test-direct-autostart.sh  test-erebus-autostart.sh  test_analysis_tools.py  test_correct_image_models.md  test_frontend_registration.js  test_hecate_curls.sh  (+10 more)
lib/nullblock-mcp-client/: Cargo.toml
lib/nullblock-mcp-client/src/: client.rs  config.rs  error.rs  filter.rs  lib.rs  registry.rs  types.rs
svc/aether/: .envrc  justfile  notes.txt  pyproject.toml
svc/aether/src/aether/: main.py
svc/arb-farm/: Cargo.toml  Dockerfile  LEARNINGS.md  entrypoint.sh
svc/arb-farm/migrations/: 001_create_arb_tables.sql  002_research_kol_threat.sql  003_create_positions_table.sql  004_add_remaining_amount_columns.sql  005_enhance_consensus_table.sql  006_kol_enhancements.sql  007_pending_exit_signals.sql  008_daily_risk_stats.sql  009_add_is_inferred_exit.sql  010_capital_reservations.sql  011_position_auto_exit.sql  012_momentum_at_exit.sql  013_runtime_settings.sql  014_relax_trades_fk.sql  015_add_gas_tracking.sql  016_add_position_source_tracking.sql
svc/arb-farm/scripts/: setup-auto-curves.sh
svc/arb-farm/src/: config.rs  erebus.rs  error.rs  main.rs  server.rs
svc/arb-farm/src/agents/: autonomous_executor.rs  curve_metrics.rs  curve_scorer.rs  engram_harvester.rs  graduation_sniper.rs  graduation_tracker.rs  hecate_notifier.rs  kol_discovery.rs  metrics_aggregator.rs  mev_hunter.rs  mod.rs  overseer.rs  scanner.rs  strategy_engine.rs
svc/arb-farm/src/consensus/: config.rs  engine.rs  mod.rs  model_discovery.rs  openrouter.rs  voting.rs
svc/arb-farm/src/database/: mod.rs
svc/arb-farm/src/engrams/: client.rs  mod.rs  schemas.rs
svc/arb-farm/src/events/: bus.rs  (+3 more)
svc/erebus/: Cargo.toml  Dockerfile  TESTING.md  entrypoint.sh
svc/erebus/benches/: performance_benchmarks.rs
svc/erebus/config/: mcp-services.toml.example
svc/erebus/logs/: erebus.log.2025-08-19
svc/erebus/migrations/: 000_create_user_references_table.sql  000_initial_schema.sql  001_create_agent_api_keys.sql  001_create_user_references_table.sql  001_crossroads_marketplace.sql  001_update_user_references_schema.sql  002_create_user_rate_limits.sql  002_fix_user_references_constraints.sql  002_setup_logical_replication.sql  003_create_erebus_to_agents_sync.sql  004_create_sync_queue.sql  005_update_source_type_to_jsonb.sql  006_fix_sync_functions.sql  007_make_user_references_source_agnostic.sql  012_cleanup_legacy_sync_system.sql
svc/erebus/scripts/: manual_sync.sh  sync_service.py  sync_to_agents.py  sync_to_agents.sql
svc/erebus/src/: auth.rs  database.rs  main.rs  user_references.rs
svc/helios/: .gitignore  Cargo.toml  helios.py  justfile  pyproject.toml  requirements.txt
svc/nullblock-agents/: AGENTS.md  Cargo.toml  DATABASE_LINKAGE.md  DEEPSEEK_INTEGRATION.md  Dockerfile  README.md  REASONING_INTEGRATION.md  config.json.example  entrypoint.sh  migrate_wallet_uuids.sql  openrouter_example.py  pyproject.toml  start_hecate_server.py  test_api_models.py  test_hecate_api.py  test_hecate_personality.sh  test_local_llm.py  test_reasoning_simple.py
svc/nullblock-agents/migrations/: 000_create_user_references_sync_cache.sql  001_create_tasks_table.sql  001_initial_schema.sql  002_create_agents_table.sql  002_setup_replication.sql  003_add_task_action_tracking.sql  003_create_user_references_table.sql  004_add_agent_activity_tracking.sql  004_add_foreign_key_constraints.sql  004_add_tasks_foreign_keys.sql  005_rename_tasks_to_task_executions.sql  005_setup_replication_subscription.sql  006_create_database_sync_functions.sql  006_fix_user_references_constraint_name.sql  007_run_all_migrations.sql  008_update_user_references_schema.sql  009_fix_user_references_architecture.sql  010_setup_subscription.sql  010_setup_subscription_docker.sql  010_setup_subscription_fixed.sql  010_update_source_type_to_jsonb.sql  011_add_agent_activity_columns.sql  011_sync_schema_with_erebus.sql
svc/nullblock-agents/scripts/: get_reasoning_models.py  get_stats.py  health_check.py
svc/nullblock-agents/src/: config.rs  error.rs  logging.rs  main.rs  models.rs  server.rs  utils.rs
svc/nullblock-agents/tests/: __init__.py  test_social_trading.py
svc/nullblock-content/: API.md  CLAUDE_TASK_Phase1-2_Core-ContentEngine.md  CONTENT_STYLE_GUIDE.md  Cargo.toml  IMPLEMENTATION_PLAN.md  INTEGRATION_TEST.md  NEXUS_FRAMEWORK.md  SKILL.md  TEST_PLAN.md  TEST_RESULTS.md  TMUXINATOR.md
svc/nullblock-content/config/: templates.json
svc/nullblock-content/migrations/: 001_create_content_queue.sql  002_create_content_metrics.sql  003_create_content_templates.sql
svc/nullblock-content/src/: database.rs  error.rs  events.rs  lib.rs  main.rs  models.rs  repository.rs  routes.rs
svc/nullblock-engrams/: Cargo.toml  Dockerfile  entrypoint.sh
svc/nullblock-engrams/migrations/: 001_create_engrams.sql
svc/nullblock-engrams/src/: config.rs  error.rs  main.rs  server.rs
svc/nullblock-mcp/: Dockerfile  README.md  pyproject.toml
svc/nullblock-mcp/tests/: __init__.py  test_mcp_tools.py
svc/nullblock-orchestration/: .gitignore  Dockerfile  README.md  pyproject.toml
svc/nullblock-protocols/: AUTHENTICATION.md  Cargo.toml  Dockerfile  MCP_COMPLETE_SUMMARY.md  MCP_IMPLEMENTATION.md  README.md  RMCP_SDK_INTEGRATION.md  SDK_INTEGRATION_SUMMARY.md  test_mcp.sh
svc/nullblock-protocols/src/: auth.rs  errors.rs  health.rs  lib.rs  main.rs  server.rs
(+928 files in other folders)
