[package]
name = "nullblock-mcp-client"
version = "0.1.0"
edition = "2021"
description = "Shared MCP client for NullBlock services"
authors = ["NullBlock Team"]

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["sync", "time"] }
futures = "0.3"

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Config file parsing (optional)
toml = { version = "0.8", optional = true }

[features]
default = []
config-file = ["toml"]

[dev-dependencies]
tokio-test = "0.4"
tokio = { version = "1.0", features = ["macros", "rt"] }
