[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

readme = "README.md"

[project]
name = "Aether"
version = "0.1.0"
description = """
Aether, named after the ethereal substance that permeates ancient Greek cosmology, serves as the conduit for 
data streams across the digital expanse. This service elegantly manages the ingress of constant data through 
websockets and APIs, ensuring a seamless flow of information to empower Nullblock's bot and agent network. 
Aether not only facilitates communication but also symbolizes the seamless, almost mystical, integration 
of data into the fabric of our applications, much like the aether was thought to fill the universe with 
invisible influence.
"""
readme = "README.md"
authors = [
    {name = "PervySoftware", email = "your.email@example.com"}
]
dependencies = [
    "solana",  # Assuming you're using solana-py for your Solana interactions
    "requests",  # For making HTTP requests to APIs
    # "pandas",  # For data manipulation and analysis
    # "matplotlib",  # For plotting if needed
]


[tool.hatch.envs.default]
dependencies = [
    "pytest",  # For testing
    "mypy",  # For static type checking
    "ruff",  # For linting
]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

# Same as Black.
line-length = 88
indent-width = 4

# Assume Python 3.8
target-version = "py38"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E4", "E7", "E9", "F"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = false

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"
