[package]
name = "arb-farm"
version = "0.1.0"
edition = "2021"
description = "ArbFarm - Autonomous Solana MEV Agent Swarm"
authors = ["NullBlock Team"]

[dependencies]
# Core async runtime
tokio = { version = "1.0", features = ["full"] }

# Web server
axum = { version = "0.7", features = ["json"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }

# Environment variables
dotenvy = "0.15"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Configuration
config = "0.14"

# Async utilities
futures = "0.3"
async-trait = "0.1"
tokio-stream = { version = "0.1", features = ["sync"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "migrate", "rust_decimal", "json"] }

# Decimal for monetary values
rust_decimal = { version = "1.33", features = ["serde"] }

# HTTP client (for external APIs: Jupiter, Raydium, pump.fun, etc.)
reqwest = { version = "0.12", features = ["json", "stream"] }

# SSE (Server-Sent Events)
axum-extra = { version = "0.9", features = ["typed-header"] }

# Event bus (broadcast channels)
tokio-util = "0.7"

# Base58/Base64 encoding (Solana addresses and transactions)
bs58 = "0.5"
base64 = "0.22"

# Transaction serialization
bincode = "1.3"

# Solana SDK (for transaction signing)
solana-sdk = "2.1"
solana-transaction-status = "2.1"
solana-client = "2.1"
spl-token = "6.0"
spl-associated-token-account = "4.0"
borsh = "1.5"

# URL parsing
url = "2.5"

# Regex for pattern matching
regex = "1.10"

# HTML parsing (for URL ingestion)
scraper = "0.21"

# Thread-safe lazy initialization
lazy_static = "1.4"
spl-token-2022 = "10.0.0"

# WebSocket client (for Helius real-time streaming)
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"

[dev-dependencies]
tokio-test = "0.4"
