[package]
name = "helios"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.132"
prost = "0.13.3"
prost-types = "0.13.3"
tokio-tungstenite = "0.24"
futures-util = "0.3.31"
