[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "helios"
version = "0.1.0"
description = """"""
readme = "README.md"
authors = [
    {name = "PervySoftware", email = "your.email@example.com"}
]

requires-python = ">=3.12"

dependencies = [
    "solana==0.35.1",  # Version specified for stability
    "requests==2.32.3",  # For making HTTP requests if needed
    "pandas==2.2.3",  # For data manipulation
    "websockets>=9.0,<12.0",  # For WebSocket server functionality
    "solders>=0.21.0,<0.22.0",  # For soldering
    "python-dotenv>=1.0.1",  # For loading environment variables
    "fastapi==0.115.6",  # For the FastAPI server
    "uvicorn[standard]==0.34.0",  # For running the FastAPI server
]

[tool.hatch.build.targets.wheel]
packages = ["src/helios"]

[tool.hatch.envs.default]
dependencies = [
    "pytest",  # For testing
    "mypy",  # For static type checking
    "ruff",  # For linting
    "pip-tools",  # For managing dependencies
]

[tool.mypy]
strict = true
ignore_missing_imports = true


[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

# Same as Black.
line-length = 88
indent-width = 4

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E4", "E7", "E9", "F"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = false

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"
