[package]
name = "nullblock-agents"
version = "0.1.0"
edition = "2021"
description = "NullBlock agents service"
authors = ["NullBlock Team"]

[dependencies]
# Core async runtime
tokio = { version = "1.0", features = ["full"] }
tokio-util = "0.7"

# Web server
axum = { version = "0.7", features = ["json", "ws", "multipart"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }

# Environment variables
dotenv = "0.15"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Configuration
config = "0.14"

# Async utilities
futures = "0.3"
async-trait = "0.1"

# Caching
moka = { version = "0.12", features = ["future"] }

# Metrics and monitoring
metrics = "0.23"
metrics-exporter-prometheus = { version = "0.15", optional = true }

# Rate limiting
governor = "0.6"

# Template engine for responses
tera = "1.19"

# Regular expressions
regex = "1.10"

# Cryptography for deterministic UUIDs
sha2 = "0.10"

# Database (optional for conversation history)
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "migrate"], optional = true }

# Redis (optional for caching)
redis = { version = "0.25", features = ["tokio-comp"], optional = true }

# Kafka for event streaming
rdkafka = { version = "0.36", features = ["cmake-build", "tokio"] }

# Shared MCP client
nullblock-mcp-client = { path = "../../lib/nullblock-mcp-client" }

[features]
default = ["postgres", "redis", "prometheus"]
postgres = ["sqlx"]
redis = ["dep:redis"]
prometheus = ["metrics-exporter-prometheus"]

[dev-dependencies]
tokio-test = "0.4"