[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nullblock-agents"
version = "0.1.0"
description = "Nullblock modular agentic army for Web3 trading automation"
readme = "README.md"
authors = [
    {name = "Nullblock", email = "dev@nullblock.io"}
]

requires-python = ">=3.12"

dependencies = [
    "web3>=6.15.1",
    "requests>=2.31.0",
    "pandas>=2.2.0",
    "numpy>=1.24.0",
    "pydantic>=2.10.5",
    "asyncio-throttle>=1.0.2",
    "aiohttp>=3.9.0",
    "python-dotenv>=1.0.1",
    "python-json-logger>=3.2.1",
    "ccxt>=4.0.0",
    "scipy>=1.11.0",
    "scikit-learn>=1.3.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "httpx>=0.25.0"
]

[tool.hatch.build.targets.wheel]
packages = ["src/agents"]

[tool.hatch.envs.default]
dependencies = [
    "pytest",
    "pytest-asyncio",
    "mypy",
    "ruff",
    "pip-tools",
]

[tool.mypy]
strict = true
ignore_missing_imports = true

[tool.ruff]
exclude = [
    ".bzr", ".direnv", ".eggs", ".git", ".git-rewrite", ".hg",
    ".ipynb_checkpoints", ".mypy_cache", ".nox", ".pants.d",
    ".pyenv", ".pytest_cache", ".pytype", ".ruff_cache", ".svn",
    ".tox", ".venv", ".vscode", "__pypackages__", "_build",
    "buck-out", "build", "dist", "node_modules", "site-packages", "venv",
]

line-length = 88
indent-width = 4

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = []
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"