[package]
name = "nullblock-content"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json", "migrate"] }
uuid = { version = "1.0", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
dotenvy = "0.15"
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
# rdkafka = { version = "0.34", features = ["cmake-build"] }
# Note: rdkafka dependency commented out for Phase 1-2. Kafka integration is Phase 4.
# To enable: install libsasl2-dev, libcurl4-openssl-dev, or use system packages
rand = "0.8"
thiserror = "1.0"

[dependencies.futures]
version = "0.3"
default-features = false
