[package]
name = "nullblock-engrams"
version = "0.1.0"
edition = "2021"
description = "NullBlock Engram Service - Universal memory/context persistence layer"
authors = ["NullBlock Team"]

[dependencies]
# Core async runtime
tokio = { version = "1.0", features = ["full"] }

# Web server
axum = { version = "0.7", features = ["json"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }

# Environment variables
dotenv = "0.15"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Configuration
config = "0.14"

# Async utilities
futures = "0.3"
async-trait = "0.1"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "migrate", "rust_decimal"] }

# Decimal for monetary values
rust_decimal = { version = "1.33", features = ["serde"] }

# HTTP client (for service-to-service calls)
reqwest = { version = "0.12", features = ["json"] }

[dev-dependencies]
tokio-test = "0.4"
