[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nullblock-orchestration"
version = "0.1.0"
description = "Nullblock orchestration engine for goal-driven agentic workflows"
readme = "README.md"
authors = [
    {name = "Nullblock", email = "dev@nullblock.io"}
]

requires-python = ">=3.12"

dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "pydantic==2.10.5",
    "langchain>=0.1.0",
    "langchain-community>=0.0.20",
    "langchain-openai>=0.0.8",
    "celery>=5.3.0",
    "redis>=4.5.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "python-dotenv>=1.0.1",
    "websockets>=9.0,<12.0",
    "requests>=2.31.0",
    "aiofiles>=23.0.0",
    "python-json-logger==3.2.1",
    "pyyaml>=6.0.0",
    "networkx>=3.0.0",
    "croniter>=1.4.0"
]

[tool.hatch.build.targets.wheel]
packages = ["src/orchestration"]

[tool.hatch.envs.default]
dependencies = [
    "pytest",
    "pytest-asyncio",
    "mypy",
    "ruff",
    "pip-tools",
]

[tool.mypy]
strict = true
ignore_missing_imports = true

[tool.ruff]
exclude = [
    ".bzr", ".direnv", ".eggs", ".git", ".git-rewrite", ".hg",
    ".ipynb_checkpoints", ".mypy_cache", ".nox", ".pants.d",
    ".pyenv", ".pytest_cache", ".pytype", ".ruff_cache", ".svn",
    ".tox", ".venv", ".vscode", "__pypackages__", "_build",
    "buck-out", "build", "dist", "node_modules", "site-packages", "venv",
]

line-length = 88
indent-width = 4

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = []
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"