[package]
name = "nullblock-protocols"
version = "1.0.0"
edition = "2021"
description = "NullBlock multi-protocol service supporting MCP and A2A protocols"
authors = ["NullBlock Team"]

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1", features = ["sync"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json"] }
futures = "0.3"
rdkafka = { version = "0.36", features = ["cmake-build", "tokio"] }
